Update maintainer email in repository.yaml

--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 ﻿name: "Filip Add-ons"
 url: "https://github.com/rolex86/ha-addons"
-maintainer: "Filip <filin.raska@email.cz>"
+maintainer: "Filip <nomail@nomail.cz>"
