--- a/presence-ssh-mqtt/config.yaml
+++ b/presence-ssh-mqtt/config.yaml
@@ -1,8 +1,8 @@
 name: "UniFi SSH Presence (MQTT)"
 slug: "unifi_ssh_presence"
 description: "Presence bez UniFi Controlleru: SSH polling UniFi AP a MQTT autodiscovery device_tracker"
-version: "0.3.0"
-url: "https://example.local/unifi_ssh_presence"
+version: "0.3.1"
+url: "https://github.com/rolex86/ha-addons/tree/master/presence-ssh-mqtt"
 arch:
   - aarch64
   - amd64
@@ -39,11 +39,11 @@ options:
     cmd_timeout_sec: 12
     known_hosts_strict: false
 
-  aps:
-    - name: "ap_1_patro"
-      host: "192.168.0.103"
-    - name: "ap_2_patro"
-      host: "192.168.0.106"
+  # Seznam UniFi AP (SSH). Nech schválně prázdné – vyplníš v konfiguraci add-onu v HA.
+  # aps:
+  #   - name: "ap_1"
+  #     host: "192.168.1.10"
+  aps: []
 
   # Learn mode: sbírá "neznámé" (ne-whitelist) klienty do /data/seen_devices.json
   # a do logu zapisuje jen při změně (nový MAC / poprvé IPv4).
@@ -51,13 +51,11 @@ options:
   learn_max_entries: 50
 
   # Whitelist zařízení, která se budou publikovat jako device_tracker
-  devices:
-    - mac: "b8:db:38:79:92:20"
-      name: "Fifa telefon Pixel 8 pro addon"
-      allow_randomized: false
-    - mac: "d4:5e:89:65:cb:01"
-      name: "Peta telefon Moto g84 addon"
-      allow_randomized: false
+  # devices:
+  #   - mac: "aa:bb:cc:dd:ee:ff"
+  #     name: "Phone"
+  #     allow_randomized: false
+  devices: []
 
 schema:
   mqtt:
