exclude/include+ kontrola

--- a/stremio-zebricky/Dockerfile
+++ b/stremio-zebricky/Dockerfile
@@ -1,16 +1,24 @@
 ARG BUILD_FROM
 FROM ${BUILD_FROM}
 
-RUN apk add --no-cache bash coreutils jq curl
+RUN apk add --no-cache \
+  bash coreutils jq curl \
+  nodejs npm
 
 WORKDIR /app
 
 COPY rootfs/ /
 COPY app/ /app/
 
-RUN if [ -f /app/package.json ]; then npm ci --omit=dev; fi
+# npm ci vyžaduje package-lock.json
+RUN if [ -f /app/package.json ]; then \
+      if [ -f /app/package-lock.json ]; then \
+        npm ci --omit=dev --no-audit --no-fund; \
+      else \
+        npm install --omit=dev --no-audit --no-fund; \
+      fi \
+    fi
 
-# chmod pro s6-rc strukturu (ať to nikdy nespadne)
 RUN chmod +x /etc/cont-init.d/* 2>/dev/null || true \
  && find /etc/s6-overlay/s6-rc.d -type f -name run -exec chmod +x {} \; 2>/dev/null || true
 
