--- a/stremio-zebricky/config.yaml
+++ b/stremio-zebricky/config.yaml
@@ -1,4 +1,4 @@
-name: "Stremio - Vlastní žebříčky (CZ Classics)"
+name: "Stremio - Vlastní žebříčky"
 slug: stremio_zebricky
 description: "Stremio addon server (7000) + Config UI (7788) s persistencí do /data."
 version: "0.0.10"
