Use nginx + php-fpm for stremio-hell-ha

--- a/stremio-hell-ha/Dockerfile
+++ b/stremio-hell-ha/Dockerfile
@@ -8,8 +8,8 @@ WORKDIR /var/www/html
 
 # System deps + PHP runtime (Alpine base)
 RUN apk add --no-cache \
-  bash curl git unzip \
-  php82 php82-phar php82-openssl php82-json php82-mbstring php82-xml php82-dom php82-ctype php82-curl php82-session \
+  bash curl git nginx unzip \
+  php82 php82-fpm php82-phar php82-openssl php82-json php82-mbstring php82-xml php82-dom php82-ctype php82-curl php82-session \
   && ln -sf /usr/bin/php82 /usr/bin/php
 
 # Composer
@@ -23,6 +23,7 @@ COPY app/ /var/www/html/
 
 # PHP deps (repo includes composer.json)
 RUN if [ -f /var/www/html/composer.json ]; then composer install --no-dev --prefer-dist --no-interaction; fi \
+ && chown -R nginx:nginx /var/www/html \
  && chmod +x /etc/cont-init.d/* 2>/dev/null || true \
  && find /etc/services.d -type f -name run -exec chmod +x {} \; 2>/dev/null || true
 
