--- a/stremio-sos-ha/app/package.json
+++ b/stremio-sos-ha/app/package.json
@@ -6,6 +6,7 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.19.2",
-    "cheerio": "^1.0.0-rc.12"
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5"
   }
 }
