stremio-prehrajto: switch to stream-source only mode

--- a/stremio-prehrajto-addon/config.yaml
+++ b/stremio-prehrajto-addon/config.yaml
@@ -1,7 +1,7 @@
 name: "Stremio Prehraj.to Add-on"
 slug: "stremio_prehrajto"
-description: "Stremio add-on s TMDB katalogem a resolverem prehraj.to."
-version: "0.1.1"
+description: "Stremio stream source add-on s resolverem prehraj.to."
+version: "0.1.2"
 url: "https://github.com/rolex86/ha-addons/tree/master/stremio-prehrajto-addon"
 
 arch:
@@ -30,7 +30,6 @@ options:
   base_url: "http://homeassistant.local:7654"
   tmdb_api_key: ""
   tmdb_language: "cs-CZ"
-  tmdb_image_base: "https://image.tmdb.org/t/p/w500"
   prehrajto_base: "https://prehraj.to"
   prehrajto_user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/122 Safari/537.36"
   default_search_limit: 20
@@ -42,7 +41,6 @@ schema:
   base_url: str
   tmdb_api_key: password
   tmdb_language: str
-  tmdb_image_base: str
   prehrajto_base: str
   prehrajto_user_agent: str
   default_search_limit: int(5,80)
