--- a/stremio-prehrajto-addon/build.yaml
+++ b/stremio-prehrajto-addon/build.yaml
@@ -6,5 +6,5 @@ build_from:
 
 labels:
   org.opencontainers.image.title: "Stremio Prehraj.to Add-on"
-  org.opencontainers.image.description: "Stremio addon with TMDB catalog and prehraj.to resolver"
+  org.opencontainers.image.description: "Stremio stream source addon with prehraj.to resolver"
   org.opencontainers.image.source: "https://github.com/rolex86/ha-addons"
