--- a/stremio-prehrajto-addon/config.yaml
+++ b/stremio-prehrajto-addon/config.yaml
@@ -1,7 +1,7 @@
 name: "Stremio Prehraj.to Add-on"
 slug: "stremio_prehrajto"
 description: "Stremio stream source add-on s resolverem prehraj.to."
-version: "0.1.2"
+version: "0.1.3"
 url: "https://github.com/rolex86/ha-addons/tree/master/stremio-prehrajto-addon"
 
 arch:
@@ -35,6 +35,7 @@ options:
   default_search_limit: 20
   default_premium: false
   cache_ttl_seconds: 900
+  log_level: "debug"
   config_secret: "change-me-please"
 
 schema:
@@ -46,4 +47,5 @@ schema:
   default_search_limit: int(5,80)
   default_premium: bool
   cache_ttl_seconds: int(30,86400)
+  log_level: str
   config_secret: password
